--- a/packages/frontend/src/features/ChatsPanel/index.module.css
+++ b/packages/frontend/src/features/ChatsPanel/index.module.css
@@ -80,6 +80,10 @@
 
     padding: 0rem;
     margin: 0rem;
+
+    /* Tooltip */
+    position: relative;
+    z-index: 1000;
 }
 
 .chat-options-list {
